// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopoverN Basic should match the snapshot 1`] = `
<div>
  <div
    style="display: flex; justify-content: center; align-items: center;"
  >
    <div
      class="mc-c-pmrKX"
    >
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        class="mc-c-gtItaD"
      >
        What does 42 mean?
      </button>
    </div>
  </div>
</div>
`;

exports[`PopoverN ContextMenu should match the snapshot 1`] = `
<div>
  <div
    style="display: flex; justify-content: center; align-items: center;"
  >
    <div
      class="mc-c-pmrKX"
    >
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        class="mc-c-gtItaD"
      >
        <div
          style="height: 4rem; width: 100%; display: flex; justify-content: center; align-items: center; background-color: rgb(239, 239, 239);"
        >
          Click
        </div>
      </button>
    </div>
  </div>
</div>
`;
